<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotesApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="add_image">Add image</string>
    <string name="priority_prompt">Choose a priority</string>
    <string name="crud_edit">Edit</string>
    <string name="crud_delete">Delete</string>
    <string name="search">Search</string>
    <string name="priorLow">Low</string>
    <string name="priorHigh">High</string>
    <string name="priorMedium">Medium</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="priority">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>

</resources>
