<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ledniov.nure.android.lab1.task3.Task3Activity">

    <item
        android:id="@+id/menu_priorities"
        android:icon="@drawable/ic_action_half_important"
        android:title="Prio"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/menu_priority_high"
                    android:checked="true"
                    android:icon="@drawable/ic_action_important"
                    android:onClick="priorityChecked"
                    android:title="@string/priorHigh" />
                <item
                    android:id="@+id/menu_priority_normal"
                    android:checked="true"
                    android:icon="@drawable/ic_action_half_important"
                    android:onClick="priorityChecked"
                    android:title="@string/priorMedium" />

                <item
                    android:id="@+id/menu_priority_low"
                    android:checked="true"
                    android:icon="@drawable/ic_action_not_important"
                    android:onClick="priorityChecked"
                    android:title="@string/priorLow" />
            </group>
        </menu>
    </item>



    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
